# OpenQuant

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOY_GUIDE.md  DESIGN.md  Dockerfile  README.md  check_security.ps1  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  vercel.json
.streamlit/: secrets.toml.example
docs/: AGENT.md  AGENT_ANALYSIS.md  INSTALLATION.md  PAPER_TRADING.md
src/agent/: planner.py  simple_planner.py
src/app/: ai_visuals.py  auto_trader.py  paper_trading.py  streamlit_app.py
src/backtest/: runner.py
src/data/: ingest.py
src/strategies/: lego_blocks.py  multi_strategy.py
src/utils/: logging.py
